--- a/.github/workflows/ltd.yml
+++ b/.github/workflows/ltd.yml
@@ -1,10 +1,10 @@
 name: Lint test and deploy
 on: push
 jobs:
-  lint:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      -name: Get Code
+      - name: Get Code
         uses: actions/checkout@v3
       - name: Install NodeJS
         uses: actions/setup-node@v3
