--- a/.github/workflows/ltd.yml
+++ b/.github/workflows/ltd.yml
@@ -1,7 +1,7 @@
 name: Lint test and deploy
 on: push
 jobs:
-  deploy:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -14,8 +14,30 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18 
+      - name: Install dependencies
+        run: npm ci    
       - name: Test code
         run: npm run test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18 
+      - name: Install dependencies
+        run: npm ci        
       - name: Build code
         run: npm run build
       - name: Deploy code
